# BookProject

./: .env  .env.example  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  MODULE-2-COMPLETION-SUMMARY.md  README.md  TESTING_RESULTS.md  TEST_REPORT.md  docker-compose.yml  proxy-server.js  railway.json  sp.constitution.md
.claude/: settings.local.json
.github/workflows/: build-deploy.yml  deploy-frontend.yml
.specify/memory/: constitution.md
docs-website/: .env.production  Dockerfile  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs-website/.docusaurus/: client-manifest.json  client-modules.js  codeTranslations.json  docusaurus.config.mjs  globalData.json  i18n.json  registry.js  routes.js  routesChunkNames.json
docs-website/docs/01-nervous-system/: 01-intro-to-ros2.md  01-intro.md  02-installation.md  03-nodes-and-topics.md  04-urdf-modeling.md  STUDENT-CHECKLIST.md  intro.md
docs-website/docs/02-digital-twin-sim/: 00-getting-started.md  01-intro-digital-twin.md  02-gazebo-fortress-setup.md  03-simulating-sensors.md  04-unity-visualization.md  (+1 more)
rag-backend/: .dockerignore  .env.example  .env.production  .gitignore  API_REFERENCE.md  Dockerfile  QUICKSTART.md  RAG_IMPLEMENTATION.md  pyproject.toml  test_gemini.py
rag-backend/scripts/: ingest_book.py
rag-backend/src/: agent.py  config.py  main.py  schemas.py
rag-backend/src/services/: gemini_client.py  vector_store.py
specs/001-ai-textbook/: spec.md  tasks.md
specs/002-nervous-system-ros2/: plan.md  spec.md  tasks.md
specs/003-digital-twin-gazebo-unity/: plan.md  spec.md  tasks.md
(+70 files in other folders)
