[tool.poetry]
name = "rag_backend"
version = "0.1.0"
description = "FastAPI backend for Physical AI & Humanoid Robotics Textbook RAG system"
authors = ["Physical AI Initiative <noreply@anthropic.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

# FastAPI Core
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"

# Data & ORM
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

# Authentication & Security
better-auth = "^0.5.0"  # For password hashing + JWT token generation
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

# RAG/Embeddings
openai = "^1.3.9"  # For embeddings and text generation API
google-generativeai = "^0.3.0"  # For Gemini embeddings
qdrant-client = "^2.7.0"  # Qdrant vector database client

# Configuration
python-dotenv = "^1.0.0"

# Development & Testing (optional)
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
httpx = "^0.25.2"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
ruff = "^0.1.8"
mypy = "^1.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
